--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -24,7 +24,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:hint="输入地址"
-            android:background="@drawable/bg_search"
+            android:background="@drawable/search_bg"
             ></EditText>
     </FrameLayout>
     <androidx.recyclerview.widget.RecyclerView
